# debstrap-rs

./: .gitignore  Cargo.toml  Makefile  README.md
debian/: changelog  control  copyright  debstrap.manpages  rules
docs/: debstrap.8.md
examples/: test_run.sh
src/: algorithms.rs  defaults.rs  functions.rs  indices.rs  main.rs  package.rs  releases.rs  sources.rs
