[package]
name = "debstrap"
version = "0.0.5"
authors = ["Stephany Panagaea"]
edition = "2021"
rust-version = "1.73"
description = "Bootstrap overly complicated Debian systems"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.6"
cmd_lib = "1.9.6"
md-5 = "0.10.6"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "http2", "rustls-tls", "stream"] }
sha2 = "0.10.9"
termion = "4.0.5"
tokio = { version = "1.47.1", features = ["full"] }
which = "7.0.3"
